--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version('1.6.21')
+    //kotlin에서 jpa 생성자 issue를 해결하기 위한 plugin
+    id 'org.jetbrains.kotlin.plugin.jpa' version('1.6.21')
+    //spring bean을 자동으로 open
+    id 'org.jetbrains.kotlin.plugin.spring' version('1.6.21')
 }
 
 group = 'com.group'
@@ -17,6 +21,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.21'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
